kubernetes/server.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seven-wonders-deployment
  namespace: seven-wonders
  labels:
    app: seven-wonders
spec:
  selector:
    matchLabels:
      app: seven-wonders
  replicas: 1
  template:
    metadata:
      labels:
        app: seven-wonders
    spec:
      containers:
        - name: seven-wonders-server
          image: hildan/seven-wonders-server:latest
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: seven-wonders-service
  namespace: seven-wonders
  labels:
    app: seven-wonders
spec:
  ports:
    - name: 80-80
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: seven-wonders
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seven-wonders-ingress
  namespace: seven-wonders
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
        - seven-wonders.hildan.org
      secretName: seven-wonders-tls
  rules:
    - host: "seven-wonders.hildan.org"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: seven-wonders-service
                port:
                  number: 80
